--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -1,4 +1,4 @@
 .options {
-  border: 1px solid black;
-  background: red;
+  border: 10px solid lighten(green, 5%);
+  background: lighten(red, 20%);
 }
