formatting the view with CSS to make it more neat and nicer

--- a/src/index.scss
+++ b/src/index.scss
@@ -6,4 +6,15 @@ html {
 *:before,
 *:after {
   box-sizing: inherit;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  min-height: 100vh;
+  background: lightgray;
+}
+
+button:focus {
+  outline: 0;
 }
