--- a/src/components/Creature/Creature.module.scss
+++ b/src/components/Creature/Creature.module.scss
@@ -1,7 +1,7 @@
 .outerContainer {
-  border: 1px solid black;
   background: white;
   width: 250px;
   height: 400px;
   margin: 10px;
+  padding: 10px;
 }
