re-worked the component in the app to have a separate body component instead of nesting in the navbar

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -35,8 +35,10 @@
       font-size: 1.4rem;
       cursor: pointer;
       transition: 0.2s;
+      link {
+        text-decoration: none;
+      }
       &:hover {
-        // background: white;
         color: #02b5bc;
       }
     }
