--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -1,15 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat|PT+Sans|Quicksand&display=swap");
 
-.outerContainer {
-  width: 100%;
-  height: 100%;
-  display: flex;
-}
-
-.menu {
-  width: 15%;
-  height: 85vh;
-  background: #37392e;
+.menuItems {
   a {
     color: #ddcecd;
     font-size: 1.4rem;
@@ -24,14 +15,4 @@
     padding-top: 30px;
     padding-left: 50px;
   }
-}
-
-.content {
-  width: 85%;
-  max-height: 85vh;
-  padding: 10px;
-  background-image: #eee5e5;
-  display: flex;
-  flex-wrap: wrap;
-  overflow: auto;
 }
