--- a/src/App/App.module.scss
+++ b/src/App/App.module.scss
@@ -1,23 +1,32 @@
 .BodyContainer {
-  width: 100%;
+  width: 100vw;
   height: 85vh;
   display: flex;
 }
 
 .Navbar {
-  width: 15%;
-  height: 85vh;
+  width: 15vw;
   background: #37392e;
 }
 
 .Content {
-  width: 85%;
-  max-height: 85vh;
-  padding: 10px;
+  width: 85vw;
+  padding: 30px;
   background-image: #eee5e5;
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-between;
   overflow: auto;
-  justify-content: center;
-  align-items: center;
+}
+
+@media screen and (max-width: 900px) {
+  .BodyContainer {
+    flex-direction: column;
+    height: 100%;
+  }
+  .Navbar,
+  .Content {
+    width: 100%;
+    padding: 0px;
+  }
 }
