--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -24,23 +24,41 @@
     justify-content: flex-end;
     align-items: center;
     padding-right: 50px;
-    .button {
+    a {
+      text-decoration: none;
       width: 100px;
-      height: 40%;
+      text-align: center;
       background: #19647e;
       border: none;
-      color: white;
+      background: aquamarine;
+      color: #19647e;
+      box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2);
       font-family: "Montserrat", sans-serif;
       text-transform: uppercase;
       font-size: 1.4rem;
       cursor: pointer;
       transition: 0.2s;
-      link {
-        text-decoration: none;
-      }
+      padding: 5px;
       &:hover {
         color: #02b5bc;
       }
+    }
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .headerContainer {
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    .logo {
+      width: 100%;
+      justify-content: center;
+      padding: 10px;
+      text-align: center;
+    }
+    .login {
+      display: none;
     }
   }
 }
