search bar added - not functional yet

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -18,8 +18,13 @@
     align-items: center;
     padding-left: 50px;
   }
+  .search {
+    width: 40%;
+    height: 100%;
+    padding-top: 30px;
+  }
   .login {
-    width: 70%;
+    width: 30%;
     display: flex;
     justify-content: flex-end;
     align-items: center;
