--- a/src/components/Creature/Creature.module.scss
+++ b/src/components/Creature/Creature.module.scss
@@ -4,8 +4,12 @@
   height: 400px;
   margin: 10px;
   padding: 20px;
-  box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
+  transition: 0.3s;
   cursor: pointer;
+  &:hover {
+    box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.3);
+  }
 }
 
 @media screen and (max-width: 900px) {
