--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -1,15 +1,25 @@
 .search {
+  width: 100%;
   input {
     width: 100%;
     height: 50px;
     padding: 10px;
-    border: 6px solid #7fffd4;
+    border-bottom: 3px solid #7fffd4;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    background: #2591b5;
     background: #19647e;
-    color: white;
-  }
-  button {
-    width: 10%;
-    height: 50px;
+    color: #ffffff;
+    font-size: 1.5rem;
+    text-transform: uppercase;
+    &::placeholder {
+      color: lightgray;
+    }
+    &:focus::placeholder {
+      transition: 0.3s;
+      color: transparent;
+    }
   }
   form:focus,
   form:active {
