--- a/src/index.scss
+++ b/src/index.scss
@@ -13,6 +13,10 @@ html {
 body {
   min-height: 100vh;
   background: lightgray;
+  overflow: auto;
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 button:focus {
