--- a/src/App/App.module.scss
+++ b/src/App/App.module.scss
@@ -12,7 +12,7 @@
 .Content {
   width: 85vw;
   padding: 30px;
-  background-image: #eee5e5;
+  background: #c7c0c0;
   overflow: auto;
   &::-webkit-scrollbar {
     display: none;
