--- a/src/index.scss
+++ b/src/index.scss
@@ -12,7 +12,7 @@ html {
 
 body {
   min-height: 100vh;
-  background: lightgray;
+  background: #c7c0c0;
   overflow: auto;
   &::-webkit-scrollbar {
     display: none;
