--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -32,7 +32,7 @@
     padding-right: 50px;
     a {
       text-decoration: none;
-      width: 100px;
+      width: 80px;
       text-align: center;
       background: #19647e;
       border: none;
@@ -41,7 +41,7 @@
       box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2);
       font-family: "Montserrat", sans-serif;
       text-transform: uppercase;
-      font-size: 1.4rem;
+      font-weight: bolder;
       cursor: pointer;
       transition: 0.2s;
       padding: 5px;
