--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -35,10 +35,9 @@
       width: 80px;
       text-align: center;
       background: #19647e;
-      border: none;
+      box-shadow: 5px 5px;
       background: aquamarine;
       color: #19647e;
-      box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2);
       font-family: "Montserrat", sans-serif;
       text-transform: uppercase;
       font-weight: bolder;
