--- a/src/components/Creature/Creature.module.scss
+++ b/src/components/Creature/Creature.module.scss
@@ -2,7 +2,7 @@
   background: rgb(238, 236, 236);
   width: 350px;
   height: 400px;
-  margin: 10px;
+  margin: 10px 15px;
   padding: 20px;
   box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
   transition: 0.3s;
