--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -24,7 +24,7 @@
     outline: 0;
   }
   button {
-    display: none;
+    // display: none;
   }
   @media screen and (max-width: 900px) {
     button {
