added more filters and detailed route

--- a/src/components/Creature/Creature.module.scss
+++ b/src/components/Creature/Creature.module.scss
@@ -1,4 +1,10 @@
+.link {
+  text-decoration: none;
+  color: grey;
+}
+
 .outerContainer {
+  font-family: "Quicksand", sans-serif;
   background: rgb(238, 236, 236);
   width: 350px;
   height: 400px;
