--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -32,6 +32,7 @@
     border: none;
     border-bottom: 3px solid #7fffd4;
     padding: 10px;
+    cursor: pointer;
   }
 
   @media screen and (max-width: 900px) {
