--- a/src/containers/Body/Body.module.scss
+++ b/src/containers/Body/Body.module.scss
@@ -42,5 +42,14 @@
 @media screen and (max-width: 900px) {
   .cards {
     justify-content: center;
+    margin: 0;
+    padding: 0;
+  }
+  .sort {
+    justify-content: center;
+    padding: 0;
+  }
+  .select {
+    margin-top: 12px;
   }
 }
