--- a/src/components/ViewCreature/ViewCreature.module.scss
+++ b/src/components/ViewCreature/ViewCreature.module.scss
@@ -1,9 +1,26 @@
 .container {
   border: 1px solid black;
   background: rgb(238, 236, 236);
+  display: flex;
+  flex-direction: column;
   padding: 20px;
-  font-family: "Quicksand", sans-serif;
+  font-family: 'Quicksand', sans-serif;
   width: 50%;
+  .buttonContainer {
+    justify-content: space-between;
+    button {
+      width: 30%;
+      height: 50px;
+      margin: 20px;
+      text-transform: uppercase;
+      background: #37392e;
+      color: white;
+      cursor: pointer;
+      &:disabled {
+        background: lightgray;
+      }
+    }
+  }
 }
 
 @media screen and (max-width: 900px) {
